# milaidy

./: .biomeignore  .codefactor.yml  .codeflowignore  .dockerignore  .dockerignore.ci  .env.example  .gitattributes  .gitignore  .gitmodules  .mcp.json  .npmignore  .npmrc  .pr-resolver-state.json  AGENTS.md  ALICE_ADMIN_KNOWLEDGE_ROADMAP.md  APP_SETUP.md  AUDIT.md  CHANGELOG.md  CLAUDE.md  CLAUDE_TEST.md  CONNECTORS_STATUS.md  CONTRIBUTING.md  DEVELOPMENT.md  DISCORD_CLOUD_PARITY.md  Dockerfile  Dockerfile.ci  Dockerfile.cloud  Dockerfile.cloud.dockerignore  Dockerfile.slim  HEARTBEAT.md  IMPLEMENTATION_PLAN.md  IMPROVEMENT_PLAN.md  INTEGRATION_DOD_MAP.md  LICENSE  MAINTAINERS.md  MASTER.md  MISSION.md  OPERATING_RULES.md  PATCH-AUDIT-REPORT.md  PRODUCT_MAP.md  (+100 more)
.circleci/: config.yml
.claude/: launch.json  settings.json  settings.local.json
.depot/: migrate-config.yaml
.devin/: wiki.json
.github/: PULL_REQUEST_TEMPLATE.md  TRUST_DESIGN.md  actionlint.yaml  contributor-trust.json  labeler.yml  trust-scoring.cjs  trust-scoring.js
.greptile/: config.json  files.json  rules.md
.milady/: stochastic-results.jsonl
.prr/: lessons.md
action-benchmark-report/: index.html
action-benchmark-report-rel-fix/: index.html
action-benchmark-report-risk2/: index.html
action-benchmark-report-risk3/: index.html
action-benchmark-report-single-rel-follow-up/: index.html
action-benchmark-report-single-rel-follow-up-v2/: index.html
action-benchmark-report-single-rel-follow-up-v3/: index.html
action-benchmark-report-single-rel-follow-up-v4/: index.html
action-benchmark-report-single-rel-follow-up-v5/: index.html
action-benchmark-report-single-rel-follow-up-v6/: index.html
action-benchmark-report-single-rel-follow-up-v7/: index.html
action-benchmark-report-subset/: index.html
action-benchmark-report-subset-negatives/: index.html
action-benchmark-report-subset-negatives-v2/: index.html
action-benchmark-report-subset-risk1/: index.html
action-benchmark-report-subset-risk1-final/: index.html
action-benchmark-report-subset-risk1-rerun/: index.html
action-benchmark-report-subset-risk1-v4/: index.html
action-benchmark-report-subset-risk1-v5/: index.html
action-benchmark-report-x/: index.html
artifacts/: benchmark-report.md  lifeops-scenario-report.json  login-required-run-1.json  login-required-run-2.json  login-required-run-3.json  login-required-run-4.json  login-required-run-5.json  scenario-smoke.json
assets/: _baseUniq-D2CoXvaR.js  arc-BF40qxZg.js  architectureDiagram-Q4EWVU46-DyG9iV-M.js  blockDiagram-DXYQGD6D-LwEQHvqP.js  byok-api-keys-BJhz6VSt.js  c4Diagram-AHTNJAMY-Btrsxlw8.js  channel-DrTAl9KT.js  character-tweaks-BGRIUj3q.js  chunk-4BX2VUAB-Doujs59u.js  chunk-4TB4RGXK-CFKGCgHX.js  chunk-55IACEB6-DCcJsUTY.js  chunk-EDXVE4YY-CRqEJO_a.js  chunk-FMBD7UC4-z0NUfugB.js  chunk-OYMX7WX6-jPcKAdaH.js  chunk-QZHKN3VN-B7QOtOeG.js  chunk-YZCP3GAM-5nIshhpk.js  classDiagram-v2-HSJHXN6E-B4c93QSM.js  clone-_rSJqBI9.js  connect-acp-C6Oaj28F.js  connect-blooio-CRMMjZAY.js  connect-bluesky-B2muEuNS.js  connect-discord-CpS-eMCU.js  connect-farcaster-Dvd3z3UQ.js  (+82 more)
packaging/pypi/: README.md  pyproject.toml
packaging/pypi/milady/: __init__.py  __main__.py  cli.py  loader.py
(+6277 files in other folders)
